mnu-line complete

--- a/app/index.html
+++ b/app/index.html
@@ -26,10 +26,74 @@
 
 </head>
 
-<body>
+<body class="ishome">
+
+<div id="page-container">
+	<nav id="mobile-mnu" data-logo="img/logo.png">
+		<ul>
+			<li><a href="#0">Главная</a></li>
+			<li><a href="#0">О нас</a></li>
+			<li><a href="#0">Услуги и цены</a></li>
+			<li><a href="#0">Полезные сервисы</a></li>
+			<li><a href="#0">Вопрос-Ответ</a></li>
+			<li><a href="#0">Отзывы</a></li>
+			<li><a href="#0">Контакты</a></li>
+			<li><a href="#0">Заказать звонок</a></li>
+		</ul>
+	</nav>
+
+	<!-- ======= HEADER START ======= -->
+	<header class="main-head" style="background-image: url('img/bg-header.jpg');">
+		<div class="top-line">
+			<div class="container">
+				<a href="/" class="top-logo top-item">
+					<img src="img/logo.png" alt="Многофункциональный кадастровый центр" class="img-responsive">
+				</a>
+				<div class="top-hamburger top-item">
+					<button class="hamburger hamburger--spin" type="button" id="mmenu-btn">
+  				<span class="hamburger-box">
+    				<span class="hamburger-inner"></span>
+  				</span>
+					</button>
+				</div>
+				<div class="top-adreses top-item">
+					<div class="top-adr">Симферополь, Евпаторское шоссе 53, офис 2</div>
+					<div class="top-adr">Симферопольский район, пгт Гвардейское, ул. Ленина 22</div>
+				</div>
+				<div class="top-contacts">
+					<a href="tel:+79788300661" class="top-phone">+7 (978) 830-06-61</a>
+					<a href="tel:+79787952596" class="top-phone">+7 (978) 795-25-96</a>
+					<a href="mailto:kadmaster@bk.ru" class="top-mail">kadmaster@bk.ru</a>
+				</div>
+			</div>
+		</div>
+
+		<div class="mnu-line">
+			<div class="container">
+				<nav class="main-mnu">
+					<ul>
+						<li><a href="#0">Главная</a></li>
+						<li><a href="#0">О нас</a></li>
+						<li><a href="#0">Услуги и цены</a></li>
+						<li><a href="#0">Полезные сервисы</a></li>
+						<li><a href="#0">Вопрос-Ответ</a></li>
+						<li><a href="#0">Отзывы</a></li>
+						<li><a href="#0">Контакты</a></li>
+						<li><a href="#0">Заказать звонок</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</header>
+	<!-- ======= HEADER END ======= -->
 
 
-<div class="container">321</div>
+</div>
+
+
+
+
+
 
 <script src="js/scripts.min.js"></script>
 
