section intro complete

--- a/app/index.html
+++ b/app/index.html
@@ -43,7 +43,7 @@
 	</nav>
 
 	<!-- ======= HEADER START ======= -->
-	<header class="main-head" style="background-image: url('img/bg-header.jpg');">
+	<header class="main-head" style="background-image: url('img/bg-intro-1.png');">
 		<div class="top-line">
 			<div class="container">
 				<a href="/" class="top-logo top-item">
@@ -84,6 +84,48 @@
 				</nav>
 			</div>
 		</div>
+
+		<!-- ======= SECTION INTRO START ======= -->
+		<section class="s-intro">
+			<div class="container">
+				<div class="intro-wrap">
+					<div class="intro-slider owl-carousel">
+						<!-- slide start -->
+						<div class="intro-slide">
+							<h1><span>Установи границы</span> своего участка</h1>
+							<a href="#0">Подробнее</a>
+						</div>
+						<!-- slide end -->
+
+						<!-- slide start -->
+						<div class="intro-slide">
+							<h1><span>Слайд 2</span> описание</h1>
+							<a href="#0">Подробнее</a>
+						</div>
+						<!-- slide end -->
+
+						<!-- slide start -->
+						<div class="intro-slide">
+							<h1><span>Жирный текст</span> Нежирный текст</h1>
+							<a href="#0">Подробнее</a>
+						</div>
+						<!-- slide end -->
+
+						<!-- slide start -->
+						<div class="intro-slide">
+							<h1><span>Заголовок</span> Подзаголовок</h1>
+							<a href="#0">Подробнее</a>
+						</div>
+						<!-- slide end -->
+					</div>
+					<img src="img/icons/flag-icon.png" alt="alt" class="intro-flag">
+				</div>
+			</div>
+		</section>
+		<!-- ======= SECTION INTRO END ======= -->
+
+
+
 	</header>
 	<!-- ======= HEADER END ======= -->
 
