advantages block complete

--- a/app/index.html
+++ b/app/index.html
@@ -395,19 +395,64 @@
 
 			<h2 class="section-title advantages-title">Почему стоит обратиться именно к нам?</h2>
 		</div>
-
-		<div class="advantages">
-			<div class="container">
-				<div class="advantages-wrap">
-					<!-- adv-item -->
-					<div class="adv-item"></div>
-					<!-- adv-item -->
-				</div>
-			</div>
-		</div>
-
 	</section>
 	<!-- ======= SECTION SERVICES END ======= -->
+
+	<div class="advantages">
+		<div class="container">
+			<div class="advantages-wrap">
+				<!-- adv-item -->
+				<div class="adv-item">
+					<div class="adv-item-icon">
+						<img src="img/icons/adv-icon-1.svg" alt="alt" class="svg">
+					</div>
+					<div class="adv-item-title">Оптимальные цены</div>
+					<div class="adv-item-desc">Цены  ниже среднерыночных,  для создания  максимально камфорных условия для наших клиентов</div>
+				</div>
+				<!-- adv-item -->
+
+				<!-- adv-item -->
+				<div class="adv-item">
+					<div class="adv-item-icon">
+						<img src="img/icons/adv-icon-2.svg" alt="alt" class="svg">
+					</div>
+					<div class="adv-item-title">Собственное оборудование</div>
+					<div class="adv-item-desc">В нашем распоряжении собственное высокоточное оборудование, которое постоянно обновляется  и  ежегодно проходит поверку точности. </div>
+				</div>
+				<!-- adv-item -->
+
+				<!-- adv-item -->
+				<div class="adv-item">
+					<div class="adv-item-icon">
+						<img src="img/icons/adv-icon-3.svg" alt="alt" class="svg">
+					</div>
+					<div class="adv-item-title">Доверительные отношения</div>
+					<div class="adv-item-desc">Наша компания работает с минимальной предоплатой, до 30 % от стоимости работ. Окончательный расчет после  достижения результата </div>
+				</div>
+				<!-- adv-item -->
+
+				<!-- adv-item -->
+				<div class="adv-item">
+					<div class="adv-item-icon">
+						<img src="img/icons/adv-icon-4.svg" alt="alt" class="svg">
+					</div>
+					<div class="adv-item-title">Квалифицированный штат</div>
+					<div class="adv-item-desc">Квалифицированный штат сотрудников позволяет выполнять работы любой сложности в кратчайшие сроки без привлечения посредников.</div>
+				</div>
+				<!-- adv-item -->
+
+				<!-- adv-item -->
+				<div class="adv-item">
+					<div class="adv-item-icon">
+						<img src="img/icons/adv-icon-5.svg" alt="alt" class="svg">
+					</div>
+					<div class="adv-item-title">Бесплатная консультация</div>
+					<div class="adv-item-desc">Наши специалисты окажут квалицированную помощь в сфере земельных отношений по телефону или лично.</div>
+				</div>
+				<!-- adv-item -->
+			</div>
+		</div>
+	</div>
 
 
 </div>
