section complex complete

--- a/app/index.html
+++ b/app/index.html
@@ -460,7 +460,7 @@
 	<section class="s-form">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-6 offset-lg-6">
+				<div class="col-lg-6 offset-lg-6 col-md-8 offset-md-4">
 					<!-- form start -->
 					<form class="contact-form body-form">
 
@@ -472,41 +472,88 @@
 
 						<h3>Бесплатная консультация специалистов</h3>
 
-							<div class="form-labels-wrap">
+						<div class="form-labels-wrap">
 
-									<label>
-										<span>Ваше имя</span>
-										<input type="text" placeholder="Евгений" name="Имя" autocomplete="off" data-validation="custom"
-											   data-validation-regexp="^[a-zA-Zа-яА-Я ]{1,20}$"
-											   data-validation-error-msg="* Укажите ваше имя">
-									</label>
-									<label>
-										<span>Номер телефона</span>
-										<input type="text" class="user-phone" name="Телефон" placeholder="+7 (___) ___-__-__"
-											   autocomplete="off" data-validation="custom"
-											   data-validation-regexp="\([0-9]{3}\)\s[0-9]{3}-[0-9]{2}-[0-9]{2}"
-											   data-validation-error-msg="* Укажите ваш телефон">
-									</label>
-
-
-									<label class="agreement-label"> <input type="checkbox" class="agreement" name="agreement" checked>Я согласен на обработку персональных данных</label>
-
-									<button type="submit" class="btn btn-red">Заказать звонок</button>
-								</div>
-							</div>
+							<label>
+								<span>Ваше имя</span>
+								<input type="text" placeholder="Евгений" name="Имя" autocomplete="off"
+									   data-validation="custom"
+									   data-validation-regexp="^[a-zA-Zа-яА-Я ]{1,20}$"
+									   data-validation-error-msg="* Укажите ваше имя">
+							</label>
+							<label>
+								<span>Номер телефона</span>
+								<input type="text" class="user-phone" name="Телефон" placeholder="+7 (___) ___-__-__"
+									   autocomplete="off" data-validation="custom"
+									   data-validation-regexp="\([0-9]{3}\)\s[0-9]{3}-[0-9]{2}-[0-9]{2}"
+									   data-validation-error-msg="* Укажите ваш телефон">
+							</label>
 
 
+							<label class="agreement-label"> <input type="checkbox" class="agreement" name="agreement"
+																   checked>Я согласен на обработку персональных
+								данных</label>
 
-
-						<input type="hidden" name="Форма" value="Запись на бесплатное занятие">
+							<button type="submit" class="btn btn-red">Заказать звонок</button>
+						</div>
 					</form>
 					<!-- form end -->
 				</div>
 			</div>
 		</div>
-
 	</section>
 	<!-- ======= SECTION FORM END ======= -->
+
+	<!-- ======= SECTION COMPLEX START ======= -->
+	<section class="s-complex">
+		<div class="container">
+			<div class="complex-wrap">
+				<h2 class="section-title">Комплекс работ</h2>
+				<!-- complex-item -->
+				<div class="complex-item">
+					<div class="complex-item-title">Стандарт</div>
+					<div class="complex-item-desc">
+						<ul>
+							<li>Бесплатная консультация специалиста</li>
+							<li>Анализ документов</li>
+							<li>Составление "дорожной карты"</li>
+							<li>Геодезическая съемка</li>
+							<li>Межевой и техплан (Подготовка пакета документов необходимых</li>
+							<li>для кадастрового учета.)</li>
+							<li>Сопровождение процедуры регистрации</li>
+						</ul>
+					</div>
+					<div class="complex-item-bottom">
+						<a href="#0"></a>
+						<div class="complex-item-price">от 6000 руб.</div>
+					</div>
+				</div>
+				<!-- /complex-item -->
+
+				<!-- complex-item -->
+				<div class="complex-item">
+					<div class="complex-item-title">Стандарт <img src="img/icons/hot-icon.svg" alt="alt" class="svg"></div>
+					<div class="complex-item-desc">
+						<ul>
+							<li>Бесплатная консультация специалиста</li>
+							<li>Анализ документов</li>
+							<li>Составление "дорожной карты"</li>
+							<li>Геодезическая съемка</li>
+							<li>Межевой и техплан (Подготовка пакета документов необходимых</li>
+							<li>для кадастрового учета.)</li>
+							<li>Сопровождение процедуры регистрации</li>
+						</ul>
+					</div>
+					<div class="complex-item-bottom">
+						<a href="#0"></a>
+						<div class="complex-item-price">от 6000 руб.</div>
+					</div>
+				</div>
+				<!-- /complex-item -->
+			</div>
+		</div>
+	</section>
+	<!-- ======= SECTION COMPLEX END ======= -->
 
 
 </div>
