section video complete

--- a/app/index.html
+++ b/app/index.html
@@ -555,6 +555,19 @@
 	</section>
 	<!-- ======= SECTION COMPLEX END ======= -->
 
+	<!-- ======= SECTION VIDEO START ======= -->
+	<section class="s-video">
+		<div class="container">
+			<div class="video-player" data-video="cu-soIVtOds" >
+				<div class="you-player video-item" id="videoPlayer-0"></div>
+				<div class="thumbnail-container video-item" style="background-image: url('img/video-img.jpg');">
+				</div>
+				<a class="btn-play start-video"></a>
+			</div>
+		</div>
+	</section>
+	<!-- ======= SECTION VIDEO END ======= -->
+
 
 </div>
 
