section faq complete

--- a/app/index.html
+++ b/app/index.html
@@ -568,6 +568,64 @@
 	</section>
 	<!-- ======= SECTION VIDEO END ======= -->
 
+	<!-- ======= SECTION FAQ START ======= -->
+	<section class="s-faq">
+		<div class="container">
+			<h2 class="section-title">Часто задаваемые вопросы</h2>
+			<div class="faq-wrap">
+				<!-- faq-item -->
+				<div class="faq-item">
+					<div class="faq-item-quest">Какие документы необходимы для консультации?</div>
+					<div class="faq-item-ans">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur culpa doloremque eos, porro sit voluptas. Dolorum enim hic, illo maxime quod rerum sapiente! Atque dignissimos, ea error ratione repellendus voluptatum.</div>
+				</div>
+				<!-- /faq-item -->
+
+				<!-- faq-item -->
+				<div class="faq-item">
+					<div class="faq-item-quest">Границы земельного участка не установлены, обязательно ли делать межевание?</div>
+					<div class="faq-item-ans">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur culpa doloremque eos, porro sit voluptas. Dolorum enim hic, illo maxime quod rerum sapiente! Atque dignissimos, ea error ratione repellendus voluptatum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At doloremque eligendi exercitationem itaque iure iusto maxime, quis. Eaque eligendi obcaecati quasi tempore vero. At culpa dolor est eveniet fugiat, hic in ipsam itaque magnam molestias natus odio pariatur, quis, repellendus sit vero voluptas voluptate voluptates!</div>
+				</div>
+				<!-- /faq-item -->
+
+				<!-- faq-item -->
+				<div class="faq-item">
+					<div class="faq-item-quest">На местности отсутствуют границы земельного участка, как определить точное местоположение?</div>
+					<div class="faq-item-ans">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur culpa doloremque eos, porro sit voluptas. Dolorum enim hic, illo maxime quod rerum sapiente! Atque dignissimos, ea error ratione repellendus voluptatum.</div>
+				</div>
+				<!-- /faq-item -->
+
+				<!-- faq-item -->
+				<div class="faq-item">
+					<div class="faq-item-quest">Можно ли приобрести земельный участок без межевания?</div>
+					<div class="faq-item-ans">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur culpa doloremque eos, porro sit voluptas. Dolorum enim hic, illo maxime quod rerum sapiente! Atque dignissimos, ea error ratione repellendus voluptatum.</div>
+				</div>
+				<!-- /faq-item -->
+
+				<!-- faq-item -->
+				<div class="faq-item">
+					<div class="faq-item-quest">Как оформить участок, если из документов есть только "членская книжка"?</div>
+					<div class="faq-item-ans">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur culpa doloremque eos, porro sit voluptas. Dolorum enim hic, illo maxime quod rerum sapiente! Atque dignissimos, ea error ratione repellendus voluptatum.</div>
+				</div>
+				<!-- /faq-item -->
+
+				<!-- faq-item -->
+				<div class="faq-item">
+					<div class="faq-item-quest">Как приватизировать земельный участок под домом?</div>
+					<div class="faq-item-ans">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur culpa doloremque eos, porro sit voluptas. Dolorum enim hic, illo maxime quod rerum sapiente! Atque dignissimos, ea error ratione repellendus voluptatum.</div>
+				</div>
+				<!-- /faq-item -->
+
+				<!-- faq-item -->
+				<div class="faq-item">
+					<div class="faq-item-quest">Собираемся изменить планировку в квартире, какие наши действия?</div>
+					<div class="faq-item-ans">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur culpa doloremque eos, porro sit voluptas. Dolorum enim hic, illo maxime quod rerum sapiente! Atque dignissimos, ea error ratione repellendus voluptatum.</div>
+				</div>
+				<!-- /faq-item -->
+			</div>
+		</div>
+	</section>
+	<!-- ======= SECTION FAQ END ======= -->
+
 
 </div>
 
