section contacts complete

--- a/app/index.html
+++ b/app/index.html
@@ -626,6 +626,60 @@
 	</section>
 	<!-- ======= SECTION FAQ END ======= -->
 
+	<!-- ======= SECTION CONTACTS START ======= -->
+	<section class="s-contacts">
+		<div class="container">
+			<h2 class="section-title d-lg-none">Контакты</h2>
+			<div class="contacts-wrap top">
+				<div class="contact-part left-part">
+					<h2 class="section-title d-none d-lg-block">Контакты</h2>
+					<div class="con-item"><img src="img/icons/phone-icon.svg" alt="alt" class="svg"> <a href="tel:+79788300661">+7 (978) 830-06-61</a>; <a href="tel:+79787952596">+7 (978) 795-25-96</a></div>
+					<div class="con-item mail"><img src="img/icons/mail-icon.svg" alt="alt" class="svg"><a href="mailto:kadmaster@bk.ru">Kadmaster@bk.ru</a></div>
+				</div>
+				<div class="contact-part right-part">За время работы в сфере геодезических услуг компания «Многофункциональный Кадастровый Центр» заслужила репутацию надежного партнера у коммерческих и муниципальных организаций области и других регионов России. Все виды работ выполняются высококвалифицированными специалистами с применением современного геодезического оборудования. Мы придерживаемся гибкой ценовой политики и всегда находим компромисс с нашими клиентами. Надеемся, что и Вы воспользуетесь услугами «Многофункциональный Кадастровый Центр», и сможете убедиться в надежности сотрудничества с Нами.</div>
+			</div>
+
+			<div class="contacts-wrap middle">
+				<div class="contact-part left-part">
+					<div class="con-item">
+						<img src="img/icons/marker-icon.svg" alt="alt" class="svg">
+						Симферопольский район, пгт Гвардейское, ул. Ленина 22
+					</div>
+				</div>
+
+				<div class="contact-part right-part">
+					<div class="con-item">
+						<img src="img/icons/marker-icon.svg" alt="alt" class="svg">
+						Симферополь, Евпаторское шоссе 53, офис 2
+					</div>
+				</div>
+
+			</div>
+		</div>
+
+		<div class="contacts-wrap bottom">
+			<div class="contact-part left-part">
+				<div class="container">
+					<div class="con-item d-lg-none">
+						<img src="img/icons/marker-icon.svg" alt="alt" class="svg">
+						Симферопольский район, пгт Гвардейское, ул. Ленина 22
+					</div>
+				</div>
+				<div id="left-map" data-att="45.115658" data-long="34.025056" data-zoom="14" data-marker="img/icons/map-marker-1.svg" class="map"></div>
+			</div>
+			<div class="contact-part right-part">
+				<div class="container">
+					<div class="con-item d-lg-none">
+						<img src="img/icons/marker-icon.svg" alt="alt" class="svg">
+						Симферополь, Евпаторское шоссе 53, офис 2
+					</div>
+				</div>
+				<div id="right-map" data-att="44.970342" data-long="34.079637" data-zoom="14" data-marker="img/icons/map-marker-2.svg" class="map"></div>
+			</div>
+		</div>
+	</section>
+	<!-- ======= SECTION CONTACTS END ======= -->
+
 
 </div>
 
