--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,14 @@
 </head>
 
 <body class="ishome">
+<!-- preloader -->
+<div class="preloader">
+	<div class="sk-chasing-dots">
+		<div class="sk-child sk-dot-1"></div>
+		<div class="sk-child sk-dot-2"></div>
+	</div>
+</div>
+<!-- /preloader -->
 
 <div id="page-container">
 	<nav id="mobile-mnu" data-logo="img/logo.png">
@@ -38,7 +46,7 @@
 			<li><a href="#0">Вопрос-Ответ</a></li>
 			<li><a href="#0">Отзывы</a></li>
 			<li><a href="#0">Контакты</a></li>
-			<li><a href="#0">Заказать звонок</a></li>
+			<li><a href="#popup-form">Заказать звонок</a></li>
 		</ul>
 	</nav>
 
@@ -79,7 +87,7 @@
 						<li><a href="#0">Вопрос-Ответ</a></li>
 						<li><a href="#0">Отзывы</a></li>
 						<li><a href="#0">Контакты</a></li>
-						<li><a href="#0">Заказать звонок</a></li>
+						<li><a href="#popup-form">Заказать звонок</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -680,7 +688,125 @@
 	</section>
 	<!-- ======= SECTION CONTACTS END ======= -->
 
+	<!-- ======= FOOTER START ======= -->
+	<footer class="main-foot">
+		<div class="container">
+			<div class="footer-wrap">
+				<div class="foot-item foot-item-1">
+					<a href="/" class="foot-logo">
+						<img src="img/logo.png" alt="alt" class="img-responsive">
+					</a>
 
+					<a href="#popup-form" class="btn btn-red">Заказать звонок</a>
+				</div>
+
+				<div class="foot-item foot-item-2">
+					<h3>Услуги</h3>
+					<nav class="foot-mnu">
+						<ul>
+							<li><a href="#0">Кадастровые</a></li>
+							<li><a href="#0">Юридические</a></li>
+							<li><a href="#0">Инженерно-геодезические</a></li>
+							<li><a href="#0">Проектировочные</a></li>
+						</ul>
+					</nav>
+				</div>
+
+				<div class="foot-item foot-item-3">
+					<h3>Меню</h3>
+					<nav class="foot-mnu">
+						<ul>
+							<li><a href="#0">Главная</a></li>
+							<li><a href="#0">Услуги и цены</a></li>
+							<li><a href="#0">Полезные сервисы</a></li>
+							<li><a href="#0">Вопрос-ответ</a></li>
+							<li><a href="#0">Отзывы</a></li>
+							<li><a href="#0">Контакты</a></li>
+						</ul>
+					</nav>
+				</div>
+
+				<div class="foot-item foot-item-3">
+					<h3>Для клиента</h3>
+					<nav class="foot-mnu">
+						<ul>
+							<li><a href="#0">Для клиента</a></li>
+							<li><a href="#0">Пользовательское соглашение</a></li>
+						</ul>
+					</nav>
+
+					<div class="socials">
+						<a href="#0" class="soc-item" target="_blank"><img src="img/icons/soc-icon-1.svg" alt="alt" class="svg"></a>
+						<a href="#0" class="soc-item" target="_blank"><img src="img/icons/soc-icon-2.svg" alt="alt" class="svg"></a>
+					</div>
+				</div>
+
+				<a href="#0" id="totop">
+					<img src="img/icons/next-arrow.png" alt="alt" class="svg">
+				</a>
+			</div>
+		</div>
+
+		<div class="dev-line">
+			<a href="https://grampus-studio.ru/" class="dev">
+				<img src="img/grampus.png" alt="alt" class="img responsive">
+			</a>
+		</div>
+	</footer>
+	<!-- ======= FOOTER END ======= -->
+
+
+</div>
+
+
+<div class="hidden">
+	<!-- form start -->
+	<form class="contact-form popup-form" id="popup-form">
+
+		<!-- Hidden Required Fields -->
+		<input type="hidden" name="project_name" value="Многофункциональный кадастровый центр">
+		<input type="hidden" name="admin_email" value="alexey.kobilianskiy@gmail.com">
+		<input type="hidden" name="form_subject" value="Заявка с сайта Многофункциональный кадастровый центр">
+		<!-- END Hidden Required Fields -->
+
+		<h3>Заявка на обратный звонок</h3>
+
+		<div class="form-labels-wrap">
+
+			<label>
+				<span>Ваше имя</span>
+				<input type="text" placeholder="Евгений" name="Имя" autocomplete="off"
+					   data-validation="custom"
+					   data-validation-regexp="^[a-zA-Zа-яА-Я ]{1,20}$"
+					   data-validation-error-msg="* Укажите ваше имя">
+			</label>
+			<label>
+				<span>Номер телефона</span>
+				<input type="text" class="user-phone" name="Телефон" placeholder="+7 (___) ___-__-__"
+					   autocomplete="off" data-validation="custom"
+					   data-validation-regexp="\([0-9]{3}\)\s[0-9]{3}-[0-9]{2}-[0-9]{2}"
+					   data-validation-error-msg="* Укажите ваш телефон">
+			</label>
+
+
+			<label class="agreement-label"> <input type="checkbox" class="agreement" name="agreement"
+												   checked>Я согласен на обработку персональных
+				данных</label>
+
+			<button type="submit" class="btn btn-red">Заказать звонок</button>
+		</div>
+	</form>
+	<!-- form end -->
+
+	<div id="popup-thanks" class="popup-form thanks">
+		<h3>Спасибо, ваша заявка отправлена!</h3>
+		<p>Наши специалисты свяжуться с Вами в ближайшее время!</p>
+	</div>
+
+	<div id="review-thanks" class="popup-form thanks">
+		<h3>Отзыв отправлен!</h3>
+		<p>Спасибо, нам важно Ваше мнение!</p>
+	</div>
 </div>
 
 
