index.html complete

--- a/app/index.html
+++ b/app/index.html
@@ -499,7 +499,7 @@
 
 
 							<label class="agreement-label"> <input type="checkbox" class="agreement" name="agreement"
-																   checked>Я согласен на обработку персональных
+																   checked required>Я согласен на обработку персональных
 								данных</label>
 
 							<button type="submit" class="btn btn-red">Заказать звонок</button>
@@ -790,7 +790,7 @@
 
 
 			<label class="agreement-label"> <input type="checkbox" class="agreement" name="agreement"
-												   checked>Я согласен на обработку персональных
+												   checked required>Я согласен на обработку персональных
 				данных</label>
 
 			<button type="submit" class="btn btn-red">Заказать звонок</button>
