page-reviews.html complete

--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,22 @@
 					<ul>
 						<li><a href="#0">Главная</a></li>
 						<li><a href="#0">О нас</a></li>
-						<li><a href="#0">Услуги и цены</a></li>
+						<li>
+							<a href="#0">Услуги и цены</a>
+							<ul>
+								<li><a href="#0">Кадастровые</a></li>
+								<li>
+									<a href="#0">Юридические</a>
+									<ul>
+										<li><a href="#0">Услуга 1</a></li>
+										<li><a href="#0">Услуга 2</a></li>
+										<li><a href="#0">Услуга 32</a></li>
+									</ul>
+								</li>
+								<li><a href="#0">Инженерно-геодезические</a></li>
+								<li><a href="#0">Проектировочные</a></li>
+							</ul>
+						</li>
 						<li><a href="#0">Полезные сервисы</a></li>
 						<li><a href="#0">Вопрос-Ответ</a></li>
 						<li><a href="#0">Отзывы</a></li>
